<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mycalendar.ShowingEvent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:stretchColumns="1">

        <TableRow android:paddingBottom="20dp">

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:paddingBottom="5dp">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/current_date"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:paddingBottom="5dp">

            <TextView
                android:id="@+id/startingTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/startingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/starting_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow android:paddingBottom="5dp">

            <TextView
                android:id="@+id/endingTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/endingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/ending_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TextView
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="activity"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back"
        android:textAllCaps="true" />
</RelativeLayout>
